--- a/exampleproject/templates/example/new_post.html
+++ b/exampleproject/templates/example/new_post.html
@@ -1,12 +1,12 @@
 {% extends 'example/index.html' %}
 
 {% block content %}
-   {% for new_post in posts %}
+   {% for post in posts %}
       <div class="content">
-        <h1>{{ new_post.title }}</h1>
-        <p>{{ new_post.text|linebreaksbr }}</p>
+        <h1>{{ post.title }}</h1>
+        <p>{{ post.text|linebreaksbr }}</p>
         <div class="date">
-        <p>published: {{ new_post.published_date }}</p>
+        <p>published: {{ post.published_date }}</p>
     </div>
     </div>
     {% endfor %}
