--- a/home/templates/page/home.html
+++ b/home/templates/page/home.html
@@ -1,6 +1,6 @@
 {% load static %}
 <html>
-    <title>Blog</title>
+    <title>Home</title>
 	<head>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -8,12 +8,10 @@
 	</head>
 	<body>
 		<div class="page-header">
-			<h1><a href="{% url 'home' %}">My Blog</a></h1>
+			<h1>Home</h1>
 		</div>
-            {% block content %}
-            {% endblock %}
-    </div>
-    </div>
-    </div>
+		<div class="content">
+			<p>Hello World</p>
+		</div>
 	</body>
-</html>
+	</html>
