--- a/exampleproject/templates/example/index.html
+++ b/exampleproject/templates/example/index.html
@@ -5,9 +5,13 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="{% static 'css/post.css' %}">
+        <link href="https://fonts.googleapis.com/css?family=Francois+One&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div class="page-header">
+        {% if user.is_authenticated %}
+            <a href="{% url 'post_new' %}" class="top-menu" style="float: right; color: white; font-size: 30pt; margin-top: 40px;"><span class="glyphicon glyphicon-plus"></span></a>
+        {% endif %}
 			<h1><a href="{% url 'home' %}">My Blog</a></h1>
 		</div>
             {% block content %}
