--- a/exampleproject/templates/example/new_post.html
+++ b/exampleproject/templates/example/new_post.html
@@ -1,9 +1,10 @@
 {% extends 'example/index.html' %}
 
 {% block content %}
-   {% for post in posts %}
+   {% for post in post %}
       <div class="content">
-        <h1>{{ post.title }}</h1>
+        <div class="container">
+        <h1><a href="{% url 'post_detail' pk=post.pk %}" style="color: black;">{{ post.title }}</a></h1>
         <p>{{ post.text|linebreaksbr }}</p>
         <div class="date">
         <p>published: {{ post.published_date }}</p>
