--- a/home/templates/page/home.html
+++ b/home/templates/page/home.html
@@ -5,10 +5,11 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="{% static 'css/post.css' %}">
+		<link href="https://fonts.googleapis.com/css?family=Francois+One&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
 		<div class="page-header">
-			<h1>Home</h1>
+			<h1><a href="{% url 'post' %}">Home</a></h1>
 		</div>
 		<div class="content">
 			<p>Hello World</p>
