--- a/exampleproject/static/css/post.css
+++ b/exampleproject/static/css/post.css
@@ -12,19 +12,20 @@
     font-family: 'Francois One', sans-serif;
 }
 
-.content {
+.content p {
     text-align: center;
     font-size:18pt;
     color black;
-    margin-top:50px;
+    margin-top:20px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     padding: 5px;
 }
 
+
 h1 {
-    font-size: 25pt;
+    font-size: 40pt;
 }
 
 .container {
@@ -33,7 +34,7 @@ h1 {
 
 .date {
   font-size:13pt;
-  text-decoration: overline;
+  text-decoration: underline;
 }
 
 .post_new {
@@ -49,4 +50,6 @@ h1 {
     text-align: center;
     font-size: 20
 }
+
+
 
