--- a/home/templates/page/home.html
+++ b/home/templates/page/home.html
@@ -4,8 +4,9 @@
 	<head>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="{% static 'css/post.css' %}">
-		<link href="https://fonts.googleapis.com/css?family=Francois+One&display=swap" rel="stylesheet"> 
+		<link rel="stylesheet" href="{% static 'css/home.css' %}">
+		<link href="https://fonts.googleapis.com/css?family=Francois+One&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
 	</head>
 	<body>
 		<div class="page-header">
@@ -14,7 +15,11 @@
             <h1><a href="https://github.com/">GitHub</a></h1>
 		</div>
 		<div class="content">
-			<p>Hello World</p>
+			<img src="media/media/image/pythondj.jpg" class="responsive">
+			<div class="container">
+			<p>Hello everyone!<br> How are you?  Hope very cool.  My name is Arthur and I want to introduce my liveblogdjango.  Here I will post various news related to me, and also throw off the links of my new sites, which you can also take a look at!</br></p>
+			<h1>Me on social networks</h1>
+			<center><p><a href="https://vk.com/lilartti"><i class="fa fa-vk fa-2x" aria-hidden="true" style="color:#597da3;margin-right:15px;"></i></a><a href="https://github.com/ruz1k"><i class="fa fa-github fa-2x" aria-hidden="true" style="color:black;margin-right: 15px;"></i></a><a href="https://www.linkedin.com/in/артур-романчев-3a2287189/"style="color:#0178b7"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a><a href="http://lilartti.ru/"><i class="fa fa-user fa-2x" aria-hidden="true" style="margin-left: 15px; color: #808080"></i></a></p></center>
 		</div>
 	</body>
 	</html>
