--- a/home/static/css/home.css
+++ b/home/static/css/home.css
@@ -12,48 +12,26 @@
     font-family: 'Francois One', sans-serif;
 }
 
-.content p {
+.content  {
     text-align: center;
-    font-size:18pt;
+    font-size:25pt;
     color black;
     margin-top:20px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding: 5px;
 }
 
 
-h1 {
+h1, h2, h3 {
     font-size: 40pt;
     font-weight:bold;
 }
 
 .container {
-    width:65%;
+    width:85%;
 }
 
-.date {
-  font-size:13pt;
-  text-decoration: underline;
-}
-
-.post_new {
-    margin-left:30px;
-    margin-top:30px;
-}
-
-.new_post h1 {
-    margin-left:30px;
-}
-
-.post_detail {
-    text-align: center;
-    font-size: 20
-}
 
 .responsive {
-  width:40%;
+  width:45%;
   float:right;
   margin-right:5%;
 }
@@ -71,10 +49,6 @@ h1 {
     font-size:13pt;
     color black;
     margin-top:20px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding: 5px;
 }
 
 
@@ -85,26 +59,9 @@ h1 {
 
 .container {
     width:100%;
-}
+ }  
+.responsive {
+  width: 85%;
+  }
 
-.date {
-  font-size:13pt;
-  text-decoration: underline;
-}
-
-.post_new {
-    margin-left:30px;
-    margin-top:30px;
-}
-
-.new_post h1 {
-    margin-left:30px;
-}
-
-.post_detail {
-    text-align: center;
-    font-size: 20
-}
-
-}
 }
