--- a/exampleproject/templates/example/new_post.html
+++ b/exampleproject/templates/example/new_post.html
@@ -1,18 +1,31 @@
 {% extends 'example/index.html' %}
+{% load static %}
+
+{% block title %}Blog{% endblock %}
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+{% block scripts %}{% endblock %}
+
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+{% block style%}{% endblock%}
 
 {% block content %}
    {% for post in post %}
-      <div class="content container">
-        <h1><a href="{% url 'post_detail' pk=post.pk %}" style="color: black;">{{ post.title }}</a></h1>
+<div class="content block">
+      <div class="container-fluid">
+        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
         {% if post.image %}
-        <p><img src="{{post.image.url}}" width="240" style="float:left;"></p>
+        <p><img src="{{post.image.url}}"></p>
         {% else %}
-       <p></p>
+       <p>NEt Photo</p>
        {% endif %}
         <p>{{ post.text|linebreaksbr }}</p>
         <div class="date">
-        <p>published: {{ post.published_date }}</p>
-    </div>
-    </div>
+        <p>Опубликовано: {{ post.published_date }}</p>
+        </div>
+      </div>
+</div>
     {% endfor %}
 {% endblock %} 
