--- a/home/templates/page/home.html
+++ b/home/templates/page/home.html
@@ -1,19 +1,17 @@
+{% extends 'example/index.html' %}
+
 {% load static %}
-<html>
-    <title>Home</title>
-	<head>
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="{% static 'css/home.css' %}">
-		<link href="https://fonts.googleapis.com/css?family=Francois+One&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
-	</head>
-	<body>
-		<div class="page-header">
-			<h1><a href="{% url 'home' %}">Home</a></h1>
-            <h1><a href="{% url 'post' %}">My Blog</a></h1>
-            <h1><a href="https://github.com/">GitHub</a></h1>
-		</div>
+{% block title %}Home{% endblock %}
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+{% block scripts %}{% endblock %}
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
+{% block style%}{% endblock%}
+{% block content%}
 		<div class="content">
 			<img src="media/media/image/pythondj.jpg" class="responsive">
 			<div class="container">
@@ -21,5 +19,4 @@
 			<h1>Me on social networks</h1>
 			<center><p><a href="https://vk.com/lilartti"><i class="fa fa-vk fa-2x" aria-hidden="true" style="color:#597da3;margin-right:15px;"></i></a><a href="https://github.com/ruz1k"><i class="fa fa-github fa-2x" aria-hidden="true" style="color:black;margin-right: 15px;"></i></a><a href="https://www.linkedin.com/in/артур-романчев-3a2287189/"style="color:#0178b7"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a><a href="http://lilartti.ru/"><i class="fa fa-user fa-2x" aria-hidden="true" style="margin-left: 15px; color: #808080"></i></a></p></center>
 		</div>
-	</body>
-	</html>
+{% endblock %}
