--- a/exampleproject/static/css/blog.css
+++ b/exampleproject/static/css/blog.css
@@ -1,110 +1,70 @@
-.page-header {
-    background-color: #9f6ccf;
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
-    text-align: left;
-}
+@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700&display=swap');
 
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 55pt;
-    text-decoration: none;
-    font-family: 'Francois One', sans-serif;
+.content {
+    margin: 0 auto;
+    width: 100%;
+    padding-top:150px;
 }
 
 .content p {
-    text-align: center;
-    font-size:18pt;
-    color black;
-    margin-top:20px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding: 5px;
-}
-
-
-h1 {
-    font-size: 40pt;
-    font-weight:bold;
-}
-
-.container {
-    width:65%;
+    font-size: 20pt;
 }
 
 .date {
-  font-size:13pt;
-  text-decoration: underline;
-}
-
-.post_new {
-    margin-left:30px;
-    margin-top:30px;
-}
-
-.new_post h1 {
-    margin-left:30px;
-}
-
-.post_detail {
-    text-align: center;
-    font-size: 20
-}
-
-.responsive {
-  width:40%;
-  float:right;
-  margin-right:5%;
-}
-
-@media screen and (min-width:320px) and (max-width:520px){
-    .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 55pt;
+    font-size: 15pt;
     text-decoration: none;
-    font-family: 'Francois One', sans-serif;
 }
 
-.content p {
-    text-align: center;
-    font-size:13pt;
-    color black;
-    margin-top:20px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding: 5px;
+.content img {
+    max-width: 100%;
+    height:350px;
 }
 
-
-h1 {
-    font-size: 30pt;
-    font-weight:bold;
+.content h1 a{
+    color:black;
+    font-family: 'Lato', sans-serif;
+    font-size:45pt;
 }
 
-.container {
-    width:100%;
+.content a {
+    margin-bottom: 30px;
 }
 
-.date {
-  font-size:13pt;
-  text-decoration: underline;
-}
-
-.post_new {
-    margin-left:30px;
-    margin-top:30px;
-}
-
-.new_post h1 {
-    margin-left:30px;
+.image img {
+    max-width:100%;
+    width:60%;
+    margin:0 auto;
 }
 
 .post_detail {
-    text-align: center;
-    font-size: 20
+    width: 100%;
+    margin:0 auto;
 }
 
+.post_detail p {
+    width: 70%;
+    margin:0 auto;
+    font-size:20pt;
+    padding-top:100px;
 }
+
+.date li {
+    font-size: 15pt;
+    width:59%;
 }
+
+.post_detail h1 {
+    padding-top:150px;
+    padding-bottom: 50px;
+}
+
+.post_image img {
+    max-width: 100%;
+    width: 20%;
+    padding-bottom: 100px;
+    padding-right: 50px;
+    padding-top: 60px;
+    position: relative;
+}
+
+
