--- a/home/static/css/home.css
+++ b/home/static/css/home.css
@@ -1,67 +1,20 @@
-.page-header {
-    background-color: #9f6ccf;
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
-    text-align: left;
+#left p {
+    font-size: 30px;
+    width: 100%;
+    margin-top: 300px;
 }
 
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 55pt;
-    text-decoration: none;
-    font-family: 'Francois One', sans-serif;
+#right {
+    max-height: 100vh;
+    height: 100vh;
+    float:right;
+    background-color:#fe7e75;
+    padding-bottom: 500px;
 }
 
-.content  {
-    text-align: center;
-    font-size:25pt;
-    color black;
-    margin-top:20px;
-}
-
-
-h1, h2, h3 {
-    font-size: 40pt;
-    font-weight:bold;
-}
-
-.container {
-    width:85%;
-}
-
-
-.responsive {
-  width:45%;
-  float:right;
-  margin-right:5%;
-}
-
-@media screen and (min-width:320px) and (max-width:520px){
-    .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 55pt;
-    text-decoration: none;
-    font-family: 'Francois One', sans-serif;
-}
-
-.content p {
-    text-align: center;
-    font-size:13pt;
-    color black;
-    margin-top:20px;
-}
-
-
-h1 {
-    font-size: 30pt;
-    font-weight:bold;
-}
-
-.container {
-    width:100%;
- }  
-.responsive {
-  width: 85%;
-  }
-
+#right img {
+    max-width: 100%;
+    width: 100%;
+    height:450px;
+    margin-top: 300px;
 }
