--- a/home/templates/page/home.html
+++ b/home/templates/page/home.html
@@ -7,16 +7,24 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 {% block scripts %}{% endblock %}
-
+{% block style%}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
-{% block style%}{% endblock%}
+{% endblock%}
+
 {% block content%}
-		<div class="content">
-			<img src="media/media/image/pythondj.jpg" class="responsive">
-			<div class="container">
-			<p>Hello everyone!<br> How are you?  Hope very cool.  My name is Arthur and I want to introduce my liveblogdjango.  Here I will post various news related to me, and also throw off the links of my new sites, which you can also take a look at!</br></p>
-			<h1>Me on social networks</h1>
-			<center><p><a href="https://vk.com/lilartti"><i class="fa fa-vk fa-2x" aria-hidden="true" style="color:#597da3;margin-right:15px;"></i></a><a href="https://github.com/ruz1k"><i class="fa fa-github fa-2x" aria-hidden="true" style="color:black;margin-right: 15px;"></i></a><a href="https://www.linkedin.com/in/артур-романчев-3a2287189/"style="color:#0178b7"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a><a href="http://lilartti.ru/"><i class="fa fa-user fa-2x" aria-hidden="true" style="margin-left: 15px; color: #808080"></i></a></p></center>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-4 col-xs-4">
+			<div id="left" class="row p-4 text-center">
+				<p>Hello everyone!<br> How are you? Hope very cool. My name is Arthur and I want to introduce my liveblogdjango.
+					Here I will post various news related to me, and also throw off the links of my new sites,
+					which you can also take a look at!</br></p>
+			</div>
 		</div>
+		<div id="right" class="row col-8 p-8 col-xs-8 text-center">
+			<img src="media/media/image/pythondj.jpg">
+		</div>
+		<div class="col-4">
+
 {% endblock %}
