--- a/exampleproject/templates/example/post_detail.html
+++ b/exampleproject/templates/example/post_detail.html
@@ -3,9 +3,7 @@
 
 {% block title %}{{ post.title }}{% endblock %}
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% block scripts %}{% endblock %}
 
 <link rel="stylesheet" href="{% static 'css/post.css' %}">
@@ -16,6 +14,7 @@
     <div class="container-fluid">
         <div class="row text-center">
             <div class="col-xs-12">
+                <!-- Head Post-->
                 <h1>{{ post.title }}</h1>
                 {% if post.title_image %}
                 <div class="image block">
@@ -26,14 +25,16 @@
                         {% endif %}
                     </div>
                 </div>
+                <!-- Date-->
                 <div class="date block">
                     <div class="col-xs-12 text-center">
-                        <li>published: {{ post.published_date }}</li>
+                        <li>Опубликовано: {{ post.published_date }}</li>
                     </div>
                 </div>
                 <hr>
                 <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
                 <p>{{ post.text|linebreaksbr }}</p>
+                <!-- Image block-->
                 <div class="post_image block">
                     <div class="col-xs-12">
                 {% if post.image%}
@@ -54,6 +55,7 @@
                 {% endif %}
                 </div>
                     </div>
+                </div>
             </div>
         </div>
     </div>
