--- a/home/templates/page/home.html
+++ b/home/templates/page/home.html
@@ -3,12 +3,9 @@
 {% load static %}
 {% block title %}Home{% endblock %}
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% block scripts %}{% endblock %}
 {% block style%}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
 {% endblock%}
 
@@ -16,15 +13,13 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-4 col-xs-4">
-			<div id="left" class="row p-4 text-center">
+			<div class="left row p-4 text-center">
 				<p>Hello everyone!<br> How are you? Hope very cool. My name is Arthur and I want to introduce my liveblogdjango.
 					Here I will post various news related to me, and also throw off the links of my new sites,
 					which you can also take a look at!</br></p>
 			</div>
 		</div>
-		<div id="right" class="row col-8 p-8 col-xs-8 text-center">
+		<div class="right col-8 p-8 col-xs-12 text-center">
 			<img src="media/media/image/pythondj.jpg">
 		</div>
-		<div class="col-4">
-
 {% endblock %}
