--- a/exampleproject/static/css/blog.css
+++ b/exampleproject/static/css/blog.css
@@ -17,6 +17,7 @@
 
 .content img {
     max-width: 100%;
+    width: 33%;
     height:350px;
 }
 
@@ -32,8 +33,9 @@
 
 .image img {
     max-width:100%;
-    width:60%;
-    margin:0 auto;
+    max-height: 100%;
+    height:550px;
+    margin: 0 auto;
 }
 
 .post_detail {
@@ -50,7 +52,8 @@
 
 .date li {
     font-size: 15pt;
-    width:59%;
+    width:70%;
+    padding-bottom: 50px;
 }
 
 .post_detail h1 {
@@ -65,6 +68,20 @@
     padding-right: 50px;
     padding-top: 60px;
     position: relative;
+}
+
+.date_post li {
+    font-size: 11pt;
+    width:84%;
+    padding-bottom:30px;
+}
+
+@media (max-width:540px) {
+	.content img{width: 100%; padding-top:20px;}
+    .date_post li { width: 100%;}
+    .date li{width: 100%;}
+    .post_image img {width: 60%; position: relative;padding-right: 0px; padding-bottom: 1px;}
+    .image img {width: 100%; height: 10%;}
 }
 
 
