--- a/exampleproject/templates/example/index.html
+++ b/exampleproject/templates/example/index.html
@@ -1,5 +1,5 @@
 {% load static %}
-<html lang="en">
+<html lang="ru">
 <!DOCTYPE html>
 	<head>
         <meta charset="UTF-8">
@@ -7,30 +7,36 @@
         <title>{% block title %}{% endblock %}</title>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/3f60135d75.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         {% block scripts %}{% endblock %}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <link rel="stylesheet" href="{% static 'css/home.css' %}">
-         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-         <link rel="stylesheet" href="{% static 'css/main.css' %}">
-         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="{% static 'css/social.css' %}">
         {% block styles %}{% endblock %}
 	</head>
 	<body>
     <div>
-        {% if user.is_authenticated %}
-<a href="{% url 'post_new' %}" class="top-menu" style="float: right; color: white; font-size: 30pt; margin-top: 40px;"><span class="glyphicon glyphicon-plus"></span></a>
-{% endif %}
     {% block nav %}
-        <nav class="nav flex-column">
-            <a class="nav-link active"href="{% url 'home' %}">Home</a>
-            <a class="nav-link" href="{% url 'post' %}">My Blog</a>
-            <a class="nav-link" href="#">Link</a>
-            <a class="nav-link" href="#">Disabled</a>
+        <nav class="navbar-flex navbar-expand-lg navbar-light bg-light text-center">
+            <a class="navbar-brand" href="#">ArthurBlog</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav mx-auto p-2">
+                    <a class="nav-item nav-link active" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="{% url 'post' %}">Blog</a>
+                    <a class="nav-item nav-link" href="{% url 'social' %}">Social networks</a>
+                    <a class="nav-item nav-link " href="#" tabindex="-1" >GitHub</a>
+                </div>
+            </div>
         </nav>
         {% endblock %}
         {% block content %}
         {% endblock %}
     </div>
-	</body>
+    </body>
 </html>
