--- a/home/static/css/home.css
+++ b/home/static/css/home.css
@@ -1,20 +1,25 @@
-#left p {
+.left p {
     font-size: 30px;
-    width: 100%;
-    margin-top: 300px;
-}
-
-#right {
-    max-height: 100vh;
-    height: 100vh;
-    float:right;
-    background-color:#fe7e75;
-    padding-bottom: 500px;
-}
-
-#right img {
     max-width: 100%;
     width: 100%;
-    height:450px;
-    margin-top: 300px;
+    height: 30%;
+    padding-top: 200px;
+}
+
+.right {
+    max-height: 100%;
+    padding-bottom: 100%;
+    background-color:#fe7e75;
+}
+
+.right img {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    margin-top: 200px;
+}
+
+@media (max-width:540px) {
+	.left p{width: 100%; font-size: 11px; padding-top: 100px;}
+    .right img{width: 100%; height: 60%; padding-top:0px;}
 }
