--- a/exampleproject/templates/example/index.html
+++ b/exampleproject/templates/example/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-item nav-link active" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="{% url 'post' %}">Blog</a>
                     <a class="nav-item nav-link" href="{% url 'social' %}">Social networks</a>
-                    <a class="nav-item nav-link " href="#" tabindex="-1" >GitHub</a>
+                    <a class="nav-item nav-link " href="https://github.com/ruz1k" tabindex="-1" >GitHub</a>
                 </div>
             </div>
         </nav>
