--- a/exampleproject/templates/example/post_detail.html
+++ b/exampleproject/templates/example/post_detail.html
@@ -44,12 +44,12 @@
                 <p></p>
                 {% endif %}
                 {% if post.image1%}
-                    <a href="{{post.image.url}}" class="ulightbox"><img src="{{post.image.url}}"></a>
+                    <a href="{{post.image1.url}}" class="ulightbox"><img src="{{post.image1.url}}"></a>
                 {% else %}
                 <p></p>
                 {% endif %}
                 {% if post.image2%}
-                    <a href="{{post.image.url}}" class="ulightbox"><img src="{{post.image.url}}"></a>
+                    <a href="{{post.image2.url}}" class="ulightbox"><img src="{{post.image2.url}}"></a>
                 {% else %}
                 <p></p>
                 {% endif %}
