--- a/social_network/templates/social/social.html
+++ b/social_network/templates/social/social.html
@@ -25,7 +25,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fab fa-linkedin fa-5x"></i>
-                <h3><a href="#">LinkedIn</a></h3>
+                <h3><a href="https://www.linkedin.cn/in/%D0%B0%D1%80%D1%82%D1%83%D1%80-%D1%80%D0%BE%D0%BC%D0%B0%D0%BD%D1%87%D0%B5%D0%B2-3a2287189/">LinkedIn</a></h3>
             </div>
         </div>
     </div>
