--- a/home/templates/page/home.html
+++ b/home/templates/page/home.html
@@ -12,14 +12,14 @@
 {% block content%}
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-4 col-xs-4">
+		<div class="col-md-6 col-xs-6">
 			<div class="left row p-4 text-center">
 				<p>Hello everyone!<br> How are you? Hope very cool. My name is Arthur and I want to introduce my liveblogdjango.
 					Here I will post various news related to me, and also throw off the links of my new sites,
 					which you can also take a look at!</br></p>
 			</div>
 		</div>
-		<div class="right col-8 p-8 col-xs-12 text-center">
-			<img src="media/media/image/pythondj.jpg">
+		<div class="right col-md-6 col-xs-12 mt-2 text-center">
+			<img src="https://images.pexels.com/photos/1181671/pexels-photo-1181671.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
 		</div>
 {% endblock %}
