--- a/exampleproject/static/css/blog.css
+++ b/exampleproject/static/css/blog.css
@@ -1,59 +1,46 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700&display=swap');
 
-.content {
+.card {
+    width:70%;
+    text-align:center;
+    margin:0 auto;
+    margin-top:250px;
+}
+
+.card-header {
+  font-size: 25pt;
+}
+
+.card img {
+    max-width:100%;
+    width:50%;
+    padding-top: 30px;
+}
+
+.card-body p {
+  font-size:18pt
+}
+
+.card-title {
+  font-size: 30pt
+}
+
+.post_detail {
     margin: 0 auto;
     width: 100%;
-    padding-top:150px;
-}
-
-.content p {
-    font-size: 20pt;
-}
-
-.date {
-    font-size: 15pt;
-    text-decoration: none;
-}
-
-.content img {
-    max-width: 100%;
-    width: 25%;
-    height:650px;
-}
-
-.content h1 a{
-    color:black;
-    font-family: 'Lato', sans-serif;
-    font-size:45pt;
-}
-
-.content a {
-    margin-bottom: 30px;
 }
 
 .image img {
     max-width:100%;
-    max-height: 100%;
-    height:550px;
+    width: 50%;
     margin: 0 auto;
-}
-
-.post_detail {
-    width: 100%;
-    margin:0 auto;
 }
 
 .post_detail p {
     width: 70%;
     margin:0 auto;
     font-size:20pt;
-    padding-top:100px;
-}
-
-.date li {
-    font-size: 15pt;
-    width:100%;
-    padding-bottom: 50px;
+    padding-top:20px;
 }
 
 .post_detail h1 {
@@ -70,18 +57,11 @@
     position: relative;
 }
 
-.date_post li {
-    font-size: 11pt;
-    width:100%;
-    padding-bottom:30px;
-}
-
 @media (max-width:540px) {
-	.content img{width: 100%; padding-top:20px;}
-    .date_post li { width: 100%;}
-    .date li{width: 100%;}
-    .post_image img {width: 60%; position: relative;padding-right: 0px; padding-bottom: 1px;}
-    .image img {width: 100%; height: 10%;}
+    .card img {width: 100%;}
+    .card-header{font-size: 15pt}
+    .card-body p {font-size:12pt}
+    .card{margin-top:100px;}
+    .image img{width: 100%}
+    .post_image img{width: 100%; margin:0 auto;}
 }
-
-
