--- a/exampleproject/templates/example/index.html
+++ b/exampleproject/templates/example/index.html
@@ -20,7 +20,7 @@
 	<body>
     <div>
     {% block nav %}
-        <nav class="navbar-flex navbar-expand-lg navbar-light bg-light text-center">
+        <nav class="navbar-flex navbar-expand-lg navbar-light bg-light text-center fixed-top">
             <a class="navbar-brand" href="#">ArthurBlog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
