--- a/exampleproject/templates/example/post_detail.html
+++ b/exampleproject/templates/example/post_detail.html
@@ -6,15 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% block scripts %}{% endblock %}
 
-<link rel="stylesheet" href="{% static 'css/post.css' %}">
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
 {% block style%}{% endblock%}
 
 {% block content %}
 <div class="post_detail block">
-    <div class="container-fluid">
+    <div class="container-fluid justify-content-center">
         <div class="row text-center">
             <div class="col-xs-12">
-                <!-- Head Post-->
                 <h1>{{ post.title }}</h1>
                 {% if post.title_image %}
                 <div class="image block">
@@ -25,9 +24,9 @@
                         {% endif %}
                     </div>
                 </div>
+                <li>{{post.published_date}}</li>
                 <hr>
                 <p>{{ post.text|linebreaksbr }}</p>
-                <!-- Image block-->
                 <div class="post_image block">
                     <div class="col-xs-12">
                 {% if post.image%}
