--- a/home/static/css/home.css
+++ b/home/static/css/home.css
@@ -2,24 +2,17 @@
     font-size: 30px;
     max-width: 100%;
     width: 100%;
-    height: 30%;
-    padding-top: 200px;
 }
 
-.right {
-    max-height: 100%;
-    padding-bottom: 100%;
-    background-color:#fe7e75;
+.container-fluid {
+  padding-top:250px;
 }
 
 .right img {
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
-    margin-top: 200px;
+  max-width: 100%;
 }
 
 @media (max-width:540px) {
-	.left p{width: 100%; font-size: 11px; padding-top: 100px;}
-    .right img{width: 100%; height: 60%; padding-top:0px;}
+	.left p{width: 100%; font-size: 18px; padding-top: 100px;}
+  .container-fluid{padding-top:0px}
 }
