--- a/social_network/templates/social/social.html
+++ b/social_network/templates/social/social.html
@@ -12,20 +12,38 @@
 {% endblock%}
 
 {% block content %}
-<div class="social block bg-light">
+<div class="social block bg-light" style="margin:0 auto">
 <div class="container-fluid">
     <div class="row text-center bg-light justify-content-center">
         <div class="col-xs-10 col-md-12 col-lg-12 col-xl-12">
-            <h1>Me on social networks</h1>
-        </div>
+            <h1>Contact with me</h1>
+            <form id="fs-frm" name="complaint-form" accept-charset="utf-8" action="https://formspree.io/artur.romanchev@yandex.ru" method="post">
+            <div class="form-group" style="margin:0 auto">
+            <fieldset id="fs-frm-inputs">
+                <label for="full-name">Name</label>
+                <input type="text" name="Имя" class="form-control" id="full-name" placeholder="Sergey">
+              <label for="email">Email address</label>
+              <input type="email" name="Email" class="form-control" id="email" placeholder="name@example.com">
+            <label for="complaint"></label>
+            <textarea rows="6" name="Сообщение" id="complaint" class="form-control" placeholder="Введите ваше сообщения....." required=""></textarea>
+            <input type="hidden" name="_subject" id="email-subject" value="Complaint Form Submission">
+        </fieldset>
+        <input type="submit" class="btn btn-success" value="Submitt" style="margin:10px">
+        </form>
+      </div>
+      </div>
         <hr>
-            <div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="col-xs-12 col-sm-4 col-md-3">
 			<i class="fab fa-vk fa-5x"></i>
                 <h3><a href="https://vk.com/lilartti ">VK</a></h3>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="col-xs-12 col-sm-4 col-md-3">
 			<i class="fab fa-linkedin fa-5x"></i>
                 <h3><a href="https://www.linkedin.cn/in/%D0%B0%D1%80%D1%82%D1%83%D1%80-%D1%80%D0%BE%D0%BC%D0%B0%D0%BD%D1%87%D0%B5%D0%B2-3a2287189/">LinkedIn</a></h3>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-3">
+              <i class="fa fa-user fa-5x" aria-hidden="true"></i>
+                <h3><a href="http://u75250.test-handyhost.ru/">Web-site</a></h3>
             </div>
         </div>
     </div>
